# codedreamer

./: .gitignore  CONTRIBUTING.md  FINDINGS_FRONTIER.md  FINDINGS_M1.md  FINDINGS_M1_6.md  FINDINGS_M2.md  FINDINGS_M3.md  FINDINGS_NEUROSYM.md  PLAN_M3.md  PROJECT_OVERVIEW.md  README.md  app.py  pyproject.toml
demo/: SPACE.md  app.py  requirements.txt
docs/: ARCHITECTURE.md  EXPLAINER.md  FRONTIER_CHALLENGE.md  finding_cmp_readout.md  finding_divergence_cause.md  finding_offload_ladder.md  finding_ood_axes.md  finding_order_probe.md  finding_structural_pc.md
execwm/: __init__.py
notebooks/: train_codedreamer.ipynb
scripts/: analysis_cmp_readout.py  analysis_divergence_cause.py  analysis_ood_axes.py  analysis_order_probe.py  causal_easy.py  comparator_probe.py  compare_causal.py  compare_token.py  curriculum_experiment.py  divergence_plan_eval.py  edit_locality.py  frontier_benchmark.py  m0_report.py  m1_5_isolate_arithmetic.py  make_hero_figure.py  neurosym_exec_eval.py  neurosym_mul.py  neurosym_spike.py  neurosym_v2_encoding.py  offload_ladder.py  rollout_analysis.py  run_execwm_bench.py  structural_pc_executor.py  train_edit_easy.py  wm_plan_eval.py
tests/: test_arith_delta.py  test_checkpoint.py  test_codec.py  test_comparator.py  test_counterfactual.py  test_curriculum.py  test_dataset.py  test_divergence_planner.py  test_edit_dynamics.py  test_edits.py  test_model.py  test_neurosym.py  test_ood_eval.py  test_partial_tasks.py  test_planning.py  test_probes.py  test_report.py  test_token_baseline.py  test_token_eval.py  test_vm.py  test_wm_scorer.py
(+47 files in other folders)
