[project]
name = "codedreamer"
version = "0.1.0"
description = "CodeDreamer: a grounded latent world model of computation (the import package is `execwm`)"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "hypothesis>=6"]
demo = ["gradio>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["execwm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
